# esp-tty

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  partitions.csv  partitions_zero.csv  platformio.ini  requirements.txt  sdkconfig.debug_console.defaults  sdkconfig.defaults  sdkconfig.zero.defaults
boards/: README.md  esp32-s3-devkitc-1-n16r8.json  esp32-s3-zero.json
components/: README.md
components/wolfssl/: CMakeLists.txt  README.md
components/wolfssl/include/: user_settings.h
docs/superpowers/specs/: 2026-05-06-nano-console-server-design.md
lib/: README.md
lib/bridge/: README.md  bridge.c  bridge.h
lib/cert_renewer/: cert_renewer_decide.c  cert_renewer_decide.h
lib/cred_store/: cred_store.c  cred_store.h
lib/mdns_dispatch/: mdns_dispatch.c  mdns_dispatch.h
lib/ota_stream/: README.md  ota_stream.c  ota_stream.h
lib/ota_verify/: README.md  ota_verify.c  ota_verify.h
lib/pubkey_auth/: README.md  pubkey_auth.c  pubkey_auth.h
lib/ring/: README.md  ring.c  ring.h
lib/rollback_decision/: README.md  rollback_decision.c  rollback_decision.h
lib/scep_proto/: README.md  scep_proto.c  scep_proto.h  scep_proto_test_helpers.h
lib/scep_transport/: scep_transport.c  scep_transport.h
lib/scrollback/: README.md  scrollback.c  scrollback.h
lib/ssh_keepalive/: ssh_keepalive.c  ssh_keepalive.h
lib/term_resize/: README.md  term_resize.c  term_resize.h
lib/udp_log/: README.md  udp_log.c  udp_log.h
lib/usb_cdc_boot_trigger/: usb_cdc_boot_trigger.c  usb_cdc_boot_trigger.h
lib/usb_cdc_drain/: README.md  usb_cdc_drain.c  usb_cdc_drain.h
lib/util/: README.md  log_sanitize.c  log_sanitize.h  zeroize.c  zeroize.h
lib/wifi_backoff/: wifi_backoff.c  wifi_backoff.h
lib/wifi_state/: wifi_state.c  wifi_state.h
main/: CMakeLists.txt  README.md  cert_renewer.c  cert_renewer.h  config.example.h  config.h.example  host_key.c  host_key.h  idf_component.yml  main.c  ota_keys  ota_session.c  ota_session.h  scep_enroll.c  scep_enroll.h  ssh_server.c  ssh_server.h  usb_cdc.c  usb_cdc.h  wifi.c  wifi.h  wolfssh_options.h
main/certs/: README.md  ca.pem.example  client.crt.example  client.key.example  scep_ca.pem.example
ota_keys/: README.md  sign.pub.pem.example
patches/: README.md
patches/wolfssl__wolfssh/: 0001-expose-resize-cb-setters-without-NO_FILESYSTEM.patch  README.md
patches/wolfssl__wolfssl/: 0001-rename-thread_local-enum-value-to-avoid-C11-keyword-conflict.patch  0002-adapt-esp32-aes-sha-to-idf6-periph-clock-api.patch  0003-sha-clock-refcount.patch  README.md
scripts/: README.md  apply_managed_patches.py  apply_managed_patches_cmake.py  clean_ds_store.py  detect_trigger_port.sh  detect_upload_port.sh  fetch_managed_components.py  flash_online_remote.sh  gen_eap_certs_asm.py  gen_ota_key.sh  ota_send.py  reboot_to_bootloader.py  scep_enroll_zero.py  sign_firmware.py  test_mdns_build_matrix.sh  test_ntp_build_matrix.sh  test_ssh_keepalive_build_matrix.sh
test/: README.md
test/embedded/test_scep_proto_smoke/: test_scep_proto_smoke.c
test/native/: README.md
test/native/test_auth_check/: test_auth_check.c
test/native/test_bridge/: test_bridge.c
test/native/test_bridge_scrollback/: test_bridge_scrollback.c
test/native/test_cdc_drain/: test_cdc_drain.c
test/native/test_cert_renewer/: test_cert_renewer.c
test/native/test_config_bounds/: test_config_bounds.c
test/native/test_cred_store/: test_cred_store.c
test/native/test_cred_store_integration/: test_cred_store_integration.c
test/native/test_cred_store_integration/fixtures/: ca_chain.pem  cert.der  expected_not_after.txt  key.der
test/native/test_host_key/: test_host_key.c
test/native/test_mdns_dispatch/: test_mdns_dispatch.c
test/native/test_ntp_config/: test_ntp_config.c
test/native/test_ota_stream/: test_ota_stream.c
test/native/test_ota_verify/: test_ota_verify.c
test/native/test_pubkey_auth/: test_pubkey_auth.c
test/native/test_ring/: test_ring.c
test/native/test_rollback_decision/: test_rollback_decision.c
test/native/test_scep_enroll/: test_scep_enroll.c
test/native/test_scep_proto/: test_scep_proto.c
test/native/test_scep_transport/: esp_http_client_stub.c  test_scep_transport.c
test/native/test_scrollback/: test_scrollback.c
test/native/test_ssh_keepalive/: test_ssh_keepalive.c
test/native/test_term_resize/: test_term_resize.c
test/native/test_udp_log/: test_udp_log.c
test/native/test_usb_cdc_boot_trigger/: test_usb_cdc_boot_trigger.c
test/native/test_user_class/: test_user_class.c
test/native/test_util/: test_util.c
test/native/test_wifi_backoff/: test_wifi_backoff.c
test/native/test_wifi_state/: test_wifi_state.c
test/scripts/: README.md  native_link_openssl.py  regen_cred_store_fixtures.py  roundtrip_verify.c  test_apply_patches.py  test_audit_fixes.py  test_bootstrap_static_ipv4.py  test_cert_renewer_reconnect.py  test_clean_build.sh  test_config_dedup.py  test_critical_round3_fixes.py  test_gen_ota_key.sh  test_high_findings_fixes.py  test_medium_findings_fixes.py  test_ota_protocol_e2e.py  test_ota_send_unit.py  test_ota_signer_roundtrip.sh  test_psk_bootstrap_dhcp.py  test_qemu_boot.py  test_qemu_nvs_persistence.py  test_reboot_to_bootloader.py  test_round3_high_h3.py  test_round3_medium_m2.py  test_round3_medium_m4.py  test_scep_enroll_zero.py  test_scep_proto_cleanup.py  test_scep_protocol_e2e.py  test_usb_debug_console.py  test_wifi_backoff_structure.py  test_wifi_zero_runtime.py  test_zero_sdkconfig.py
test/stubs/: README.md  esp_err.h  esp_heap_caps.h  esp_http_client.h  esp_log.h
test/stubs/freertos/: FreeRTOS.h
test/stubs/mbedtls/: ecdsa.h  ecp.h  error.h  gcm.h  pk.h  sha256.h
test/stubs/wolfssl/wolfcrypt/: asn_public.h  coding.h  ecc.h  error-crypt.h  pkcs7.h  random.h  rsa.h  settings.h  sha256.h  types.h
test/wokwi/: README.md  diagram.json  wokwi.toml
test/zero_wifi_smoke/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
test/zero_wifi_smoke/main/: CMakeLists.txt  main.c
